--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,12 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".LoginFragment"
     android:background="@drawable/bgfrag"
+    tools:context=".ui.LoginFragment"
     tools:layout_editor_absoluteY="25dp">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_layout_email"
+        android:textColorHint="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,13 +23,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/hint_email"
-            android:inputType="textEmailAddress" />
+            android:inputType="textEmailAddress"/>
 
     </android.support.design.widget.TextInputLayout>
 
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/input_layout_senha"
+        android:textColorHint="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="57dp"
         android:layout_marginTop="16dp"
@@ -40,23 +42,16 @@
             android:id="@+id/input_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_senha" />
+            android:hint="@string/hint_senha"
+            android:inputType="textPassword"
+            android:textColorHint="@drawable/edt_style" />
 
     </android.support.design.widget.TextInputLayout>
 
     <Button
         android:id="@+id/btLogin"
-        android:layout_width="0dp"
-        android:layout_height="30dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        style="@style/btLogin"
         android:text="@string/entrar"
-        android:textSize="10sp"
-        android:textStyle="bold"
-        android:background="@drawable/bgbt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvAqui" />
@@ -69,6 +64,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
         android:text="@string/cadastro"
         android:textColor="@color/colorPrimary"
         app:layout_constraintEnd_toStartOf="@+id/tvAqui"
