--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -20,6 +20,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/app_name"
-        android:textColor="@color/colorAccent"/>
+        android:textColor="@color/white"/>
 
 </android.support.v7.widget.Toolbar>
