--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#CCffffff</color>
-    <color name="amarelo">#ffe600</color>
+    <color name="amarelo">#ffef00</color>
+    <color name="amarelo_e">#ffe005</color>
 </resources>
