--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bgfrag"
-    tools:context=".ui.LoginFragment"
+    tools:context=".ui.fragments.LoginFragment"
     tools:layout_editor_absoluteY="25dp">
 
     <android.support.design.widget.TextInputLayout
@@ -23,6 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/hint_email"
+            style="@style/edt"
             android:inputType="textEmailAddress"/>
 
     </android.support.design.widget.TextInputLayout>
@@ -43,6 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/hint_senha"
+            style="@style/edt"
             android:inputType="textPassword"
             android:textColorHint="@drawable/edt_style" />
 
