--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -2,12 +2,13 @@
 <android.support.v7.widget.Toolbar
     android:layout_width="match_parent"
     android:layout_height="?android:attr/actionBarSize"
-    android:elevation="10dp"
+    android:elevation="@dimen/basic8"
     android:padding="3dp"
     android:background="@color/colorPrimary"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <ImageView
+       android:src="@drawable/ic_star_complete"
        android:layout_width="45dp"
        android:layout_height="wrap_content"/>
 
