--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_map"
+        android:icon="@drawable/ic_action_map"
+        android:title="@string/title_map" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navegation_list"
+        android:icon="@drawable/ic_action_list"
+        android:title="@string/title_cadastrados" />
+
+    <item
+        android:id="@+id/navigation_exit"
+        android:icon="@drawable/ic_action_exit_to_app"
+        android:title="@string/title_exit" />
 
 </menu>
