--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,7 +10,7 @@
         android:id="@+id/iv_logo"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/custom_ratingbar"
+        android:background="@drawable/ic_stars"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
